package grymV2.game.world;

/**
 * Developable
 */
public interface Developable {
}
