package grymV2.game.world;

import grymV2.game.config.TextureMap;

/**
 * ForegroundGameObject
 */
abstract public class ForegroundGameObject extends GameObject {
    public ForegroundGameObject(TextureMap texture) {
        super(texture);
    }

}
