package grymV2.game.world;

/**
 * Immutable
 */
public interface Immutable {

}
