package grymV2.game.world;

abstract class ImmutableForegroundObject implements ForegroundGameObject, Immutable {
}
