
package grymV2.game.world;

import grymV2.game.config.TextureMap;

/**
 * Lake
 */
public class Lake extends Water {
    public Lake(TextureMap texture) {
        super(texture);
    }
}
