package grymV2.game.world;

/**
 * Mutable
 */
public interface Mutable {

}
