package grymV2.game.world;

/**
 * Placeable
 */
public interface Placeable extends Mutable {

}
