package grymV2.game.world;

import grymV2.game.config.TextureMap;

/**
 * SportsCentre
 */
public class SportsCentre extends Building {

    public SportsCentre(TextureMap texture) {
        super(TextureMap.SPORTSCENTRE, "Sports Centre", "A sports facility for recreational activities.");
    }
}
