package grymV2.game.world;

import grymV2.game.config.TextureMap;

/**
 * Terrain
 */
public class Terrain extends BackgroundGameObject {
    public Terrain(TextureMap texture) {
        super(texture);
    }
}
